Remove [most] hackery.  SPV main panel now has fixed height (relative to window), and the post column gets its own scrollbar.

--- a/scss/single-post-view.scss
+++ b/scss/single-post-view.scss
@@ -10,6 +10,7 @@ body.single-post-view .main {
 .single-post-view {
   div.post {
     width: 100%;
+    height: 200px; /* JS later sets this relative to the browser viewport */
     display: inline-block;
     padding: 0;
     border-radius: 3px;
@@ -23,6 +24,7 @@ body.single-post-view .main {
       box-sizing: border-box;
       width: 55%;
       height: 100%;
+      overflow-y: auto;
 
       padding: 2em;
       background: $dust;
